<resources>
    <string name="app_name">我的账本</string>
    <string name="empty_view_title_text">欢迎来到董青青的进货app...</string>
    <string name="empty_view_subtitle_text">添加一个账单试试吧</string>
    <string name="money_unit">元</string>
    <string name="goods">商品</string>
    <string name="amount">数量</string>
    <string name="unit_price">单价</string>
    <string name="money">金额</string>
    <string name="total">合计</string>
    <string name="name">姓名</string>
    <string name="date">日期</string>
    <string name="buyer">买家</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="error_name">请输入姓名</string>
    <string name="error_total">请输入总金</string>
    <string name="error_number">需要种类数量</string>
    <string name="unknown_date">无日期</string>
    <string name="delete_all">删除所有账单</string>
    <string name="newInvent">新建账单</string>
    <string name="editInvent">修改账单</string>
    <string name="unsaved_changes_dialog_msg">您的更改未保存，是否退出？</string>
    <string name="discard">放弃更改并退出</string>
    <string name="keep_editing">继续编辑</string>
    <string name="delete_dialog_msg">是否删除账单</string>
    <string name="delete_all_dialog_msg">是否删除所有账单，删除后不可恢复，请慎重选择</string>
    <string name="cancel">取消</string>
    <string name="editor_delete_failed">账单删除失败</string>
    <string name="editor_delete_successful">账单删除成功</string>
    <string name="editor_insert_failed">添加账单失败</string>
    <string name="editor_insert_successful">添加账单成功</string>
    <string name="editor_update_failed">更改账单失败</string>
    <string name="editor_update_successful">更改账单成功</string>
    <string name="checkInfo">请检查账单信息是否完整</string>
    <string name="checkCard">请输入正确的单价和数量</string>
    <string name="checkName">请输入买家姓名</string>
    <string name="checkTotal">请检查以上商品信息是否完整！</string>
    <string name="wrongBuyerInfoDialogMsg">请填写买家信息</string>
    <string name="noInventDialogMsg">请至少填写一个账单</string>
    <string name="checkType">请输入商品名称</string>
    <string name="checkAmount">请输入正确的数量</string>
    <string name="checkUnitPrice">请输入正确的单价</string>
    <string name="zeroMoney">单价或数量为0</string>
    <string name="pick_date">选择日期</string>
    <string name="writeName">填写姓名</string>
    <string name="remove_fail">至少填写一项商品</string>
    <string name="share">分享</string>
    <string name="bill">合计欠款</string>
    <string name="queryBills">点击查询</string>
    <string name="add_bill">修改欠款</string>
    <string name="add_raw_data">修改原始数据</string>
    <string name="category_method">修改类型</string>
    <string name="decrease">减少</string>
    <string name="override">覆盖</string>
    <string name="increase">增加</string>
    <string name="checkBill">请填写金额</string>
    <string name="zeroBill">金额不能为0</string>
    <string name="negativeBill">总欠款将为负数，无法修改！</string>
    <string name="changeBillSucceed">修改数据成功！</string>
    <string name="jine">金额</string>
    <string name="title_activity_about">关于作者</string>
    <string name="title_activity_about2">关于</string>

</resources>
