<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RawDataActivity"
    android:padding="@dimen/activity_margin"
    android:id="@+id/rootView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/add_bill"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:gravity="left"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="@dimen/activity_margin_bottom"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                android:gravity="left"
                android:hint="@string/name"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                style="@style/EditorFieldStyle"
                android:layout_weight="1"/>

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_bill"
                android:gravity="left"
                android:hint="@string/jine"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
    android:id="@+id/container_method"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Label -->
    <TextView
        android:text="@string/category_method"
        style="@style/CategoryStyle"
        android:gravity="left"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"/>

    <!-- Input field -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <!-- Gender drop-down spinner -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_height="48dp"
            android:layout_width="wrap_content"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_margin_bottom">

        <!-- Label -->
        <TextView
            android:text="@string/bill"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="left"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:id="@+id/bill"
                style="@style/CategoryStyle"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:width="0dp"
                android:hint="@string/queryBills"
                android:gravity="left"
                android:onClick="queryBill"
                android:textColor="#2B3D4D" />

            <TextView
                style="@style/EditorUnitsStyle"
                android:layout_gravity="center_vertical"
                android:text="@string/money_unit" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>